# ITCXOP2

./: .gitignore  CMakeLists.txt
src/mac/: itcXOP2.r
xcode/: Info.plist  Info64.plist  itcXOP2_Prefix.pch
xcode/English.lproj/: InfoPlist.strings
xcode/itcXOP2.xcodeproj/: project.pbxproj
xcode/itcXOP2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/itcXOP2.xcodeproj/project.xcworkspace/xcshareddata/: SimpleFit.xccheckout  SimpleFit.xcscmblueprint
xcode/itcXOP2.xcodeproj/project.xcworkspace/xcuserdata/Howard.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
xcode/itcXOP2.xcodeproj/project.xcworkspace/xcuserdata/Micah.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
xcode/itcXOP2.xcodeproj/xcuserdata/Howard.xcuserdatad/xcschemes/: SimpleFit-32.xcscheme  SimpleFit-64.xcscheme  xcschememanagement.plist
xcode/itcXOP2.xcodeproj/xcuserdata/Micah.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/itcXOP2.xcodeproj/xcuserdata/Micah.xcuserdatad/xcschemes/: itcXOP2-64.xcscheme  itcXOP2.xcscheme  xcschememanagement.plist
